# unified-mcp-gateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  mcp-gateway.toml.example
.github/workflows/: agent-release.yml  ci.yml
mcp-gateway-agent/: Cargo.toml  Dockerfile  mcp-gateway-agent.toml.example
mcp-gateway-agent/src/: cli.rs  config.rs  local_backends.rs  main.rs  tunnel.rs
mcp-gateway-agent/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
mcp-gateway-agent/src/tui/: dashboard.rs  events.rs  mod.rs  setup.rs  theme.rs  widgets.rs
mcp-gateway-agent/src/update/: mod.rs
mcp-gateway-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
mcp-gateway-dashboard/src/: App.tsx  index.css
mcp-gateway-dashboard/src/components/: ErrorBoundary.tsx  Layout.tsx
mcp-gateway-dashboard/src/hooks/: useAuth.ts
mcp-gateway-dashboard/src/lib/: api.ts  connectors.ts
mcp-gateway-dashboard/src/pages/: AuditTimeline.tsx  BackendConfig.tsx  ForcePasswordSetup.tsx  Login.tsx  MetricsOverview.tsx  PolicyEditor.tsx  Settings.tsx  ToolInventory.tsx  UsageGraph.tsx  UserManagement.tsx
mcp-gateway-server/: Cargo.toml  Dockerfile
mcp-gateway-server/src/: config.rs  errors.rs  main.rs
mcp-gateway-server/src/agent/: mod.rs
mcp-gateway-server/src/api/: agent_releases.rs  api_keys.rs  audit.rs  auth.rs  backends.rs  live.rs  mcp.rs  metrics.rs  mod.rs  policies.rs  roles.rs  tools.rs  usage.rs  users.rs
mcp-gateway-server/src/audit/: mod.rs  recorder.rs  redactor.rs
mcp-gateway-server/src/backends/: classifier.rs  manager.rs  mod.rs
mcp-gateway-server/src/db/: mod.rs  seed.rs
mcp-gateway-server/src/gateway/: router.rs  session.rs
mcp-gateway-server/src/metrics/: collector.rs  mod.rs
mcp-gateway-server/src/policy/: engine.rs  mod.rs  rate_limiter.rs  rbac.rs
